--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,5 @@
 {
-  "name": "Node container",
-  "image": "node:20.18.1-alpine",
-//  "build": {
-//    "dockerfile": "Dockerfile"
-//  },
-
-  // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  // "forwardPorts": [],
-
-  // Use 'postCreateCommand' to run commands after the container is created.
-  // "postCreateCommand": "yarn install",
-
-  // Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-  "remoteUser": "node"
+  "build": {
+    "dockerfile": "Dockerfile"
+  }
 }
